# radikal-sector

./: LICENSE.md  README.md  mvloc.config.jsonc  pyproject.toml
.github/workflows/: nightly.yml
locale-machine/data/autoBlueprints.xml.append/: fr.po  ja.po
locale-machine/data/blueprints.xml.append/: fr.po  ja.po
machine-json/: machine-fr-5.93b.json  machine-fr-5.97k.json  machine-fr-5.98e.json  machine-fr-6.11n.json  machine-ja-5.98e.json
machine-json/tmp_query/: fr-9.json
src-en/data/: animations.xml.append  autoBlueprints.xml.append  blueprints.xml.append  djmod_punker_a.txt  djmod_punker_a.xml  djmod_punker_b.txt  djmod_rammer_a.txt  djmod_rammer_a.xml  djmod_rammer_b.txt  djmod_rammer_b.xml  djmod_scorch.txt  djmod_scorch.xml  events.xml.append  events_addon_icon.xml.append  events_imageList.xml.append  events_sector_clan.xml.append  events_sector_laststand.xml.append  events_sector_radikal.xml  events_ships.xml.append  events_special_boons.xml.append  events_special_defeat.append  events_special_filler.xml.append  events_special_guards.xml.append  events_special_jukebox.xml.append  events_special_lightspeed.xml.append  events_special_main.xml.append  events_special_mechanical.xml.append  events_special_morality.xml.append  events_special_multiverse.xml.append  events_special_standard.xml.append  events_special_storage.xml.append  hyperspace.xml.append  rk_lead_titans_user_a.txt  rk_lead_titans_user_a.xml  rk_scorcher_a.txt  rk_scorcher_a.xml  rk_scorcher_b.txt  rk_scorcher_b.xml  rk_scorcher_c.txt  rk_scorcher_c.xml  (+5 more)
src-en/mod-appendix/: metadata.xml
(+143 files in other folders)
