[tool.poetry]
name = "radikal-sector-translation"
version = "0.1.0"
description = ""
authors = ["ranhai613 <hulanhai613@gmail.com>, Aleev141 <aleev1414@gmail.com>"]
readme = "README.md"
packages = [{include = "radikal_sector_translation"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mvlocscript = {git = "https://github.com/ftl-mv-translation/mvloc.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
